crates/agglayer-interop-grpc-types/src/compat/v1/snapshots/agglayer_interop_grpc_types__compat__v1__tests__bad_data__debug.snap
---
source: crates/agglayer-interop-grpc-types/src/compat/v1/tests.rs
expression: "format!(\"{:?}\", eyre::Error::from(error))"
---
invalid value

Location:
    crates/agglayer-interop-grpc-types/src/compat/v1/tests.rs:30:25
