crates/agglayer-interop-grpc-types/src/compat/v1/snapshots/agglayer_interop_grpc_types__compat__v1__tests__bad_data__kind.snap
---
source: crates/agglayer-interop-grpc-types/src/compat/v1/tests.rs
expression: error.kind()
---
InvalidData
